# api-old

./: .gitignore  README.md  pyproject.toml
api/: __init__.py  conversations.py  test.py
api/llms/: openai_functions.py  openai_helpers.py
supabase/: config.toml
supabase/migrations/: 20230704154905_setup.sql
